Fixed speakers alignment in speaker page

--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -5,7 +5,6 @@
 .speakers-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   padding-top: 40px;
   margin-bottom: -60px;
 
